# Utility

./: .gitignore  README.md  pyproject.toml
notebooks/: mnist_utility.ipynb  two_spirals_utility.ipynb
notebooks/results/: mnist_all_seeds.csv  mnist_result.csv  mnist_summary.csv  two_spirals_all_seeds.csv  two_spirals_one_run.csv  two_spirals_summary.csv
rankgen_utility_experiment/: __init__.py  data.py  experiment.py  figures.py  generators.py  metrics.py  mnist.py
results/: two_spirals_all_seeds.csv  two_spirals_one_run.csv  two_spirals_summary.csv
scripts/: run_two_spirals.py
