[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rankgen-utility-experiment"
version = "0.1.0"
description = "Two-spirals synthetic experiment for RankGen utility diagnostics"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
]

[tool.setuptools.packages.find]
include = ["rankgen_utility_experiment*"]
